<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">City Service Admin</string>

    <string name="enter_password">Enter your Password</string>
    <string name="enter_email">"Enter your Email "</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="users_fragment">Users Fragment</string>
    <string name="logout">Logout</string>
    <string name="user_name">Name</string>
    <string name="add_services">Add Services</string>
    <string name="personal_services">Personal Services</string>
    <string name="home_services">Home Services</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="add_home_appliances">Add Home Appliances</string>
    <string name="add_personal_service">Personal Service</string>
    <string name="service_name">Service Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="service_description">Service Description</string>
    <string name="service_price">Service Price</string>
    <string name="service_time">Required Time</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="choose_background_image">Choose Background Image</string>
    <string name="services">Services</string>

    <string name="required_time">Required Time</string>
    <string name="number_of_users">Number of Users</string>
    <string name="number_of_bookings">Number of Bookings</string>
    <string name="number_of_personal_services">Number of Personal Services</string>
    <string name="choose_images">Choose Images</string>
    <string name="change_icon">Change Icon</string>
    <string name="change_background_image">Change Background</string>
    <string name="number_of_technicians">Numbner of Technicians</string>
    <string name="number_of_home_services">Number of Home Services</string>
    <string name="number_of_repair_appliances">Number of Repair Appliances</string>
    <string name="new_registrations">New Registration</string>
    <string name="new_registration">New Registration</string>
    <string name="user_email">dummy@mail.com</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="dummy_email">dummy@mail.com</string>
    <string name="enter_phone_number">Enter Your Email</string>
    <string name="label_1">Male</string>
    <string name="label_2">Female</string>
    <string name="name">Name</string>
    <string name="technician_email">Email</string>
    <string name="technician_phone_number">Number</string>
    <string name="technician_dob">Date Of Birth</string>
    <string name="technician_gender">Gender</string>
    <string name="technical_role">Role</string>
    <string name="service_certificate">Service Certificate</string>
    <string name="approve">Approve</string>


    <string name="fcmServerKey" tools:ignore="Typos">"AAAA7LU9Gak:APA91bG9_ZeKdLS55Ft-tyeSkRLNlHLJ2iMk8-M70BuFN3z8XcGCN_6LLPkdzddQvgp4W1jkm1sGLY833gCVmrd03C2Spk-AwtZr-bOHjNF6dH-d-3dwigN11Sq-d-yl8Lc-QWwG9pzv"</string>
    <string name="report">Report</string>
    <string name="user_details">User Details</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="technician_details">Technician Details</string>
    <string name="service_details">Service Details</string>
    <string name="total_bookings">Total Bookings</string>
    <string name="total_amount">Total Amount</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_time">Booking Time</string>
    <string name="admin">Admin Center</string>
    <string name="delete_info">Swipe right to delete service</string>
</resources>