<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateServiceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imagesLayout"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="#ddd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/todo"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/iconLayout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/imagesLayout"
            app:layout_constraintStart_toStartOf="@+id/imagesLayout"
            app:layout_constraintEnd_toEndOf="@+id/imagesLayout"
            app:layout_constraintBottom_toBottomOf="@+id/imagesLayout"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/circularImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/pictureCard"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:cardCornerRadius="50dp"
                    app:strokeColor="#000000"
                    app:strokeWidth="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iconImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_person"
                        android:contentDescription="@string/todo"
                        />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/iconLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/serviceDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@+id/iconLayout"
                >


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_half_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editServiceName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/service_name"
                        android:inputType="textPersonName"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/normal_half_margin"
                    android:layout_marginBottom="@dimen/normal_half_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editServiceDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/service_description"
                        android:gravity="start"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/normal_half_margin"
                    android:layout_marginBottom="@dimen/normal_half_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editRequiredTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/required_time"
                        android:inputType="textPersonName"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/normal_half_margin"
                    android:layout_marginBottom="@dimen/normal_half_margin"
                    app:startIconDrawable="@drawable/ic_rupee"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editServicePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/service_price"
                        android:inputType="number"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonChangeIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_icon"
                    />

                <Button
                    android:id="@+id/buttonChangeBackgroundImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_background_image"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="@+id/mainContainer"
                    >

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/design_default_color_error"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        tools:ignore="ButtonStyle,TextContrastCheck" />

                </LinearLayout>


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>